--- a/style.css
+++ b/style.css
@@ -1,13 +1,35 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin:0;
 }
 
 h1 {
     font-size: 50px;
     
 }
-.orange {color: orange};
+.orange {color: orange}
 
 section{
     display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding-left: 20px;
+}
+.half-width img{
+    width:80%
+}
+a {
+    text-decoration: none;
+    padding: 10px;
+    color: white;
+    background-color: orange;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.top-area{
+    background-image: url('images/top-banner.png');
+    background-repeat: no-repeat;
 }
