--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ h1 {
 
 section{
     display: flex;
+    margin-bottom:100px;
 }
 
 .half-width {
     width: 50%;
-    padding-left: 20px;
+    padding-left: 40px;
 }
 .half-width img{
     width:80%
@@ -32,4 +33,10 @@ a {
 .top-area{
     background-image: url('images/top-banner.png');
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
